# llmkit

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/plans/: 2026-02-25-llmkit-design.md  2026-02-25-llmkit-implementation.md
docs/site/: getting-started.md  hooks.md  index.md  models.md  providers.md  streaming.md  structured-output.md  tools.md  types.md
examples/: smoke.py
getting-started/: index.html
hooks/: index.html
providers/: index.html
search/: search_index.json
src/llmkit/: __init__.py  agent.py  chat.py  exceptions.py  hosted_tools.py  models.py  tools.py  types.py
src/llmkit/providers/: __init__.py  anthropic.py  azure.py  bedrock.py  gemini.py  openai.py  vertex.py
streaming/: index.html
structured-output/: index.html
tests/: test_agent.py  test_chat.py  test_hosted_tools.py  test_init.py  test_models.py  test_providers.py  test_tools.py  test_types.py
tests/providers/: test_anthropic.py  test_gemini.py  test_openai.py
tools/: index.html
types/: index.html
