[project]
name = "llmkit"
version = "0.1.0"
description = "Minimal, typed Python LLM wrapper"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=1.0"]
all = ["openai>=1.0", "anthropic>=0.40", "google-genai>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "ty>=0.0.1a0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.14"
