[project]
name = "llmkit"
version = "0.1.0"
description = "Minimal, typed Python LLM wrapper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Afstkla" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/Afstkla/llmkit"
Repository = "https://github.com/Afstkla/llmkit"
Issues = "https://github.com/Afstkla/llmkit/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=1.0"]
azure = ["openai>=1.0"]
bedrock = ["anthropic[bedrock]>=0.40"]
vertex = ["anthropic[vertex]>=0.40"]
all = ["openai>=1.0", "anthropic[bedrock,vertex]>=0.40", "google-genai>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "ty>=0.0.1a0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.14"
